# executorch

./: Dockerfile  README.md  export_pte.py  image_to_c_header.py  model-u55-128.pte
arm/: CMakeLists.txt  Notes
arm/include/: image_data.h  sample_files.h
arm/src/: cat.c  dog.c  main.cpp  sample_files.c
cpu/: CMakeLists.txt
cpu/src/: main.cpp
custome_pte/model_header_files/: wheater_model_pte.h
custome_pte/trained_models/: weather_classification_model.pth
includes/executorch/kernels/portable/: Functions.h  NativeFunctions.h
models/: model.pte  softmax.pte
